[gd_scene load_steps=4 format=3 uid="uid://dp04ry0sqt3qm"]

[ext_resource type="Script" path="res://scenes/UI/menu/canvas_layer.gd" id="1_heuwu"]
[ext_resource type="Texture2D" uid="uid://bd5nmi4ncxigr" path="res://main graphica/image.png" id="1_mfawn"]
[ext_resource type="AudioStream" uid="uid://dyvg5ycfhrsth" path="res://audio/Intro.wav" id="3_wcpev"]

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_heuwu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="conta" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="conta"]
texture_filter = 1
position = Vector2(0, -1)
scale = Vector2(0.34, 0.199)
texture = ExtResource("1_mfawn")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.0862745)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -59.0
offset_right = -143.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8.25979, 2.38521)
size_flags_horizontal = 4

[node name="Button2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
offset_left = 411.0
offset_top = 376.0
offset_right = 419.0
offset_bottom = 384.0
scale = Vector2(46.02, 9.49797)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wcpev")
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
